cluster-services/goldpinger/base/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: goldpinger
  labels:
    app: goldpinger
spec:
  selector:
    matchLabels:
      app: goldpinger
  revisionHistoryLimit: 5
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
      labels:
        app: goldpinger
    spec:
      serviceAccountName: goldpinger-serviceaccount
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: goldpinger
          image: "bloomberg/goldpinger:3.9.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
