cluster-services/goldpinger/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goldpinger
  labels:
    app: goldpinger
spec:
  selector:
    app: goldpinger
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30080
      name: http
