cluster-services/goldpinger/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldpinger
spec:
  ingressClassName: nginx
  rules:
    - host: goldpinger.ha.basa62.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goldpinger
                port:
                  name: http
